# Game_Interaction_Technology

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/virtualtouchpad/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/opencv2/: cvconfig.h
app/src/main/java/com/example/virtualtouchpad/: HandInputService.kt  MainActivity.kt  NativeLib.kt  OneEuroFilterManager.kt  PointerOverlay.kt  PointerOverlayManager.kt  TouchAccessibilityService.kt  TouchService.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
app/src/test/java/com/example/virtualtouchpad/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
